--- a/Vetor_não_ordenado.ipynb
+++ b/Vetor_não_ordenado.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMSKX9Jo86ZhA0gLZ0+CrZ1",
+      "authorship_tag": "ABX9TyPij75iE4PeA8m5NKxZ/3kl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "Yb-4PbBPTYnU"
       },
@@ -69,12 +69,19 @@
         "      print('Capacidade máxima atingida')\n",
         "    else:\n",
         "      self.ultima_posicao += 1\n",
-        "      self.valores[self.ultima_posicao] = valor"
+        "      self.valores[self.ultima_posicao] = valor\n",
+        "\n",
+        "  # O(n)\n",
+        "  def pesquisar(self, valor):\n",
+        "    for i in range(self.ultima_posicao + 1):\n",
+        "      if valor == self.valores[i]:\n",
+        "        return i\n",
+        "    return -1"
       ],
       "metadata": {
         "id": "DcIWb34ITohT"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -85,7 +92,7 @@
       "metadata": {
         "id": "ghEd6wN4UnqD"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -98,9 +105,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VfVeWRo1Uv7-",
-        "outputId": "41fb472c-9225-4ccd-d77b-8c351d0f8f4e"
+        "outputId": "3c212caf-72af-4e20-e8fa-8d21f6cd8ca2"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,7 +126,7 @@
       "metadata": {
         "id": "5qIFFPp2WiHd"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -132,9 +139,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5ZMrrf9dWla-",
-        "outputId": "abdae118-d411-4a3f-bf7c-a76133624b17"
+        "outputId": "cce23488-f47a-442d-8db0-9a929b546e76"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +163,7 @@
       "metadata": {
         "id": "ob4kHll_Wsh2"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -169,9 +176,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UGP8fYiYXJNj",
-        "outputId": "5c0e888b-1c59-42a2-b5c8-3b56dbe99ef6"
+        "outputId": "1ea216ab-0a73-4708-d22a-9c48022f1b63"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,9 +203,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4cbjIDgZW7Aw",
-        "outputId": "e75d3cd9-3eba-4341-871f-c7146b815d2b"
+        "outputId": "e2db8265-2993-401c-d941-3b080b5caf78"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -212,6 +219,84 @@
     {
       "cell_type": "code",
       "source": [
+        "vetor.pesquisar(8)"
+      ],
+      "metadata": {
+        "id": "fDsk-06oXcXX",
+        "outputId": "0d248a87-b4b0-43a9-bb38-415c14301665",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vetor.pesquisar(9)"
+      ],
+      "metadata": {
+        "id": "I_T1Kjb0ypOd",
+        "outputId": "0441eb33-1208-479a-9028-4a3ba3eb76b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vetor.pesquisar(2)"
+      ],
+      "metadata": {
+        "id": "i4PjGi6iywsf",
+        "outputId": "2c4a45ef-2057-41af-d6b1-ef53432ac7de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "vetor.ultima_posicao"
       ],
       "metadata": {
@@ -219,9 +304,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sbFGo-GDW_wf",
-        "outputId": "657c2725-b73b-4017-c62c-6043c0da5265"
+        "outputId": "8ba99a84-b182-457a-fe7a-894ddfe53c87"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -231,18 +316,9 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 11
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "fDsk-06oXcXX"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
