implementando exclusão e pesquisa

--- a/Vetor_ordenado.ipynb
+++ b/Vetor_ordenado.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOKnzWRojruEgE4eZzA1FKq",
+      "authorship_tag": "ABX9TyMLOccs7tzV1Qid+ZPLT836",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "asbEdxrnp-RI"
       },
@@ -75,12 +75,33 @@
         "      x -= 1\n",
         "\n",
         "    self.valores[posicao] = valor\n",
-        "    self.ultima_posicao += 1"
+        "    self.ultima_posicao += 1\n",
+        "\n",
+        "  # O(n)\n",
+        "  def pesquisar(self, valor):\n",
+        "    for i in range(self.ultima_posicao + 1):\n",
+        "      if self.valores[i] > valor:\n",
+        "        return -1\n",
+        "      if self.valores[i] == valor:\n",
+        "        return i\n",
+        "      if i == self.ultima_posicao:\n",
+        "        return -1\n",
+        "\n",
+        "  # O(n)\n",
+        "  def excluir(self, valor):\n",
+        "    posicao = self.pesquisar(valor)\n",
+        "    if posicao == -1:\n",
+        "      return -1\n",
+        "    else:\n",
+        "      for i in range(posicao, self.ultima_posicao):\n",
+        "        self.valores[i] = self.valores[i + 1]\n",
+        "\n",
+        "      self.ultima_posicao -= 1"
       ],
       "metadata": {
         "id": "VwGZH15YeFS_"
       },
-      "execution_count": 15,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -94,9 +115,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Jw-enwStgm1A",
-        "outputId": "d860b362-46f0-4f9b-ce30-08c7960982e4"
+        "outputId": "05558045-836d-42cf-ab46-f5191576511c"
       },
-      "execution_count": 16,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,9 +139,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2ESn95x9jFON",
-        "outputId": "faaab6a4-5e4f-46f0-d7eb-5540f69ec58e"
+        "outputId": "7027ccca-89ac-45e2-9e5c-76d6ed999a10"
       },
-      "execution_count": 17,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,9 +163,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZxAHpH8CjPLK",
-        "outputId": "7d050efd-923e-41e1-9de4-aadb4ab28959"
+        "outputId": "8d1ecf99-b0f0-46d8-cf62-7f1dc41c853e"
       },
-      "execution_count": 18,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -167,9 +188,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jbD592x1jTEj",
-        "outputId": "341a830b-49ff-4e96-8452-7d2ee2b39645"
+        "outputId": "70b5ec7c-740b-4940-f0e1-f15eb49a165f"
       },
-      "execution_count": 19,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,9 +214,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ndh7XEYXjU58",
-        "outputId": "c011b6c6-98c6-4432-b9f5-8e8d84c5e74d"
+        "outputId": "50e2fc09-06b9-4502-e8ea-688c3cf7a92a"
       },
-      "execution_count": 20,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -220,9 +241,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5aT29k--jXoX",
-        "outputId": "946cbd15-4e29-4834-a0be-1b078f245243"
+        "outputId": "b578adca-2b18-49ae-a70f-a4d59492bbda"
       },
-      "execution_count": 21,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,9 +269,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BPpJbpgYjdPX",
-        "outputId": "5252a2d3-dc60-4ac1-a171-70dd3b3b7bf5"
+        "outputId": "e0353944-8392-47d2-ec10-0ad949a69ea3"
       },
-      "execution_count": 22,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -268,12 +289,216 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "vetor.pesquisar(8)"
+      ],
       "metadata": {
-        "id": "KzsiJXO3jgu1"
+        "id": "KzsiJXO3jgu1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0f68e793-2654-49f1-9b61-0bfa01ddcc10"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vetor.pesquisar(2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "szdWpsF1FKaZ",
+        "outputId": "04f0d124-98dd-44da-f3fd-a6c1ed777a96"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vetor.pesquisar(9)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IvC3Sa3mFXKv",
+        "outputId": "16fcf080-e030-4143-f6f5-e8e432b32895"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vetor.imprime()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yls7UVsPGjGE",
+        "outputId": "a6e4c95c-d712-4b30-e911-f21c5abec30f"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0  -  1\n",
+            "1  -  3\n",
+            "2  -  4\n",
+            "3  -  5\n",
+            "4  -  6\n",
+            "5  -  8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vetor.excluir(5)\n",
+        "vetor.imprime()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IaWAg7seGlP9",
+        "outputId": "397ec76d-87ab-4aa5-da27-40bb535cf17f"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0  -  1\n",
+            "1  -  3\n",
+            "2  -  4\n",
+            "3  -  6\n",
+            "4  -  8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vetor.excluir(1)\n",
+        "vetor.imprime()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N9w7euoRGr7G",
+        "outputId": "e0e22488-a002-4cfa-812a-59670be4d840"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0  -  3\n",
+            "1  -  4\n",
+            "2  -  6\n",
+            "3  -  8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vetor.excluir(8)\n",
+        "vetor.imprime()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M-9LgRX8Gt7y",
+        "outputId": "11f786ab-d490-4775-a834-b4d92d596b9e"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0  -  3\n",
+            "1  -  4\n",
+            "2  -  6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vetor.excluir(9)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rHMNuAScGxKz",
+        "outputId": "e5cc049f-83ca-41af-ab35-521aaf2dfc88"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
     }
   ]
 }
