add pesquisa binária

--- a/Vetor_ordenado.ipynb
+++ b/Vetor_ordenado.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLOccs7tzV1Qid+ZPLT836",
+      "authorship_tag": "ABX9TyO7qRSa57Gb4T8BGnuqYQBM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "asbEdxrnp-RI"
       },
@@ -87,6 +87,23 @@
         "      if i == self.ultima_posicao:\n",
         "        return -1\n",
         "\n",
+        "  # O(log n)\n",
+        "  def pesquisa_binaria(self, valor):\n",
+        "    limite_inferior = 0\n",
+        "    limite_superior = self.ultima_posicao\n",
+        "\n",
+        "    while True:\n",
+        "      posicao_atual = int((limite_inferior + limite_superior) / 2)\n",
+        "      if self.valores[posicao_atual] == valor:\n",
+        "        return posicao_atual\n",
+        "      elif limite_inferior > limite_superior:\n",
+        "        return -1\n",
+        "      else:\n",
+        "        if self.valores[posicao_atual] < valor:\n",
+        "          limite_inferior = posicao_atual + 1\n",
+        "        else:\n",
+        "          limite_superior = posicao_atual - 1\n",
+        "\n",
         "  # O(n)\n",
         "  def excluir(self, valor):\n",
         "    posicao = self.pesquisar(valor)\n",
@@ -101,7 +118,7 @@
       "metadata": {
         "id": "VwGZH15YeFS_"
       },
-      "execution_count": 27,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -117,7 +134,7 @@
         "id": "Jw-enwStgm1A",
         "outputId": "05558045-836d-42cf-ab46-f5191576511c"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +158,7 @@
         "id": "2ESn95x9jFON",
         "outputId": "7027ccca-89ac-45e2-9e5c-76d6ed999a10"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -165,7 +182,7 @@
         "id": "ZxAHpH8CjPLK",
         "outputId": "8d1ecf99-b0f0-46d8-cf62-7f1dc41c853e"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,7 +207,7 @@
         "id": "jbD592x1jTEj",
         "outputId": "70b5ec7c-740b-4940-f0e1-f15eb49a165f"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -216,7 +233,7 @@
         "id": "ndh7XEYXjU58",
         "outputId": "50e2fc09-06b9-4502-e8ea-688c3cf7a92a"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -243,7 +260,7 @@
         "id": "5aT29k--jXoX",
         "outputId": "b578adca-2b18-49ae-a70f-a4d59492bbda"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -271,7 +288,7 @@
         "id": "BPpJbpgYjdPX",
         "outputId": "e0353944-8392-47d2-ec10-0ad949a69ea3"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -299,7 +316,7 @@
         },
         "outputId": "0f68e793-2654-49f1-9b61-0bfa01ddcc10"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -325,7 +342,7 @@
         "id": "szdWpsF1FKaZ",
         "outputId": "04f0d124-98dd-44da-f3fd-a6c1ed777a96"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -351,7 +368,7 @@
         "id": "IvC3Sa3mFXKv",
         "outputId": "16fcf080-e030-4143-f6f5-e8e432b32895"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -377,7 +394,7 @@
         "id": "yls7UVsPGjGE",
         "outputId": "a6e4c95c-d712-4b30-e911-f21c5abec30f"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -406,7 +423,7 @@
         "id": "IaWAg7seGlP9",
         "outputId": "397ec76d-87ab-4aa5-da27-40bb535cf17f"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -434,7 +451,7 @@
         "id": "N9w7euoRGr7G",
         "outputId": "e0e22488-a002-4cfa-812a-59670be4d840"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -461,7 +478,7 @@
         "id": "M-9LgRX8Gt7y",
         "outputId": "11f786ab-d490-4775-a834-b4d92d596b9e"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -486,7 +503,7 @@
         "id": "rHMNuAScGxKz",
         "outputId": "e5cc049f-83ca-41af-ab35-521aaf2dfc88"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -497,6 +514,151 @@
           },
           "metadata": {},
           "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vetor = VetorOrdenado(10)\n",
+        "vetor.insere(8)\n",
+        "vetor.insere(9)\n",
+        "vetor.insere(4)\n",
+        "vetor.insere(1)\n",
+        "vetor.insere(5)\n",
+        "vetor.insere(7)\n",
+        "vetor.insere(11)\n",
+        "vetor.insere(13)\n",
+        "vetor.insere(2)\n",
+        "vetor.imprime()"
+      ],
+      "metadata": {
+        "id": "An-dt2I8whKs",
+        "outputId": "191393d4-2867-4b46-fc9f-d4a4376e33cc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0  -  1\n",
+            "1  -  2\n",
+            "2  -  4\n",
+            "3  -  5\n",
+            "4  -  7\n",
+            "5  -  8\n",
+            "6  -  9\n",
+            "7  -  11\n",
+            "8  -  13\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vetor.pesquisa_binaria(7)"
+      ],
+      "metadata": {
+        "id": "K4vxNXHOw39g",
+        "outputId": "4b763bb3-7b90-4c07-f619-3747f1a6928e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vetor.pesquisa_binaria(5)"
+      ],
+      "metadata": {
+        "id": "aeco7BykxLiL",
+        "outputId": "b9c8795c-db48-455f-bcb3-229fd0f5e8fb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vetor.pesquisa_binaria(13)"
+      ],
+      "metadata": {
+        "id": "uqVq1x2HxOjj",
+        "outputId": "9246baee-74c1-469e-cfd4-47c2dd515a80",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vetor.pesquisa_binaria(20)"
+      ],
+      "metadata": {
+        "id": "zgB7C71kxRZK",
+        "outputId": "a8a4314b-c914-4d9f-f6bc-fb408fa9ba9e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
         }
       ]
     }
