--- a/Pilha.ipynb
+++ b/Pilha.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPB7YLob99UNL0nEIL2j5oh",
+      "authorship_tag": "ABX9TyN9tGFP603byA3WYUfEYroL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
       "metadata": {
         "id": "8vJOiubvwl-1"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -67,12 +67,23 @@
         "      print('A pilha está cheia')\n",
         "    else:\n",
         "      self.__topo += 1\n",
-        "      self.valores[self.__topo] = valor"
+        "      self.__valores[self.__topo] = valor\n",
+        "  def desempilhar(self):\n",
+        "    if self.__pilha_vazia():\n",
+        "      print('A pilha está vázia')\n",
+        "    else:\n",
+        "      self.__topo -= 1\n",
+        "\n",
+        "  def ver_topo(self):\n",
+        "    if self.__topo != -1:\n",
+        "      return self.__valores[self.__topo]\n",
+        "    else:\n",
+        "      return -1"
       ],
       "metadata": {
         "id": "oklUSFy3wnMw"
       },
-      "execution_count": 2,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -83,34 +94,235 @@
       "metadata": {
         "id": "accl2Hdz1iFP"
       },
-      "execution_count": 4,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "pilha.empilhar"
+        "pilha.ver_topo()"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 175
+          "base_uri": "https://localhost:8080/"
         },
         "id": "a1p4AHdf1muI",
-        "outputId": "58c9f2e7-1a32-428d-89d7-ab91ad3467c4"
+        "outputId": "4da0fe12-8961-4465-c950-775ff9c5e7b3"
       },
-      "execution_count": 5,
+      "execution_count": 13,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-709aaf512286>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpilha\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__topo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m: 'Pilha' object has no attribute '__topo'"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pilha.empilhar(1)\n",
+        "pilha.ver_topo()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I7tjHUtlia7I",
+        "outputId": "2f848d6c-deed-4552-8992-8e40b775fa5a"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pilha.empilhar(1)\n",
+        "pilha.empilhar(2)\n",
+        "pilha.empilhar(3)\n",
+        "pilha.empilhar(4)"
+      ],
+      "metadata": {
+        "id": "7WdGTE5ciqio"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pilha.empilhar(6)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2FSK3qkgiv59",
+        "outputId": "81ccb5a0-e41d-40a5-9328-372f1ffcc50a"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A pilha está cheia\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pilha.ver_topo()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CBbDUZxvix6g",
+        "outputId": "647407db-be91-4f73-cf4a-dd0d1f5b21f8"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pilha.desempilhar()"
+      ],
+      "metadata": {
+        "id": "yaAWK0gVi18R"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pilha.ver_topo()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Lvf5tbu6i4xJ",
+        "outputId": "1e4e813e-5217-4f5d-c750-49444ffb35dc"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pilha.desempilhar()\n",
+        "pilha.desempilhar()\n",
+        "pilha.desempilhar()"
+      ],
+      "metadata": {
+        "id": "Xr_X-XwAi8Zt"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pilha.ver_topo()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2NF8SpoLi-5W",
+        "outputId": "fc9776b5-59ab-49da-f790-6ddc83ac6cff"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pilha.desempilhar()"
+      ],
+      "metadata": {
+        "id": "xWfkn9yXjC8i"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pilha.ver_topo()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BcgtVX-fjEGA",
+        "outputId": "6fb5c7a5-2e22-4bba-de3d-4b5da1b6dece"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
         }
       ]
     }
