--- a/Pilha.ipynb
+++ b/Pilha.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9tGFP603byA3WYUfEYroL",
+      "authorship_tag": "ABX9TyPLNx2TbyMHPuCYjge+/R1C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
       "metadata": {
         "id": "8vJOiubvwl-1"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -54,22 +54,24 @@
         "  def __init__(self, capacidade):\n",
         "    self.__capacidade = capacidade\n",
         "    self.__topo = -1\n",
-        "    self.__valores = np.empty(self.__capacidade, dtype=int)\n",
+        "    self.__valores = np.empty(self.__capacidade, dtype=str)\n",
         "\n",
         "  def __pilha_cheia(self):\n",
         "    return self.__topo == self.__capacidade - 1\n",
         "\n",
-        "  def __pilha_vazia(self):\n",
+        "  def pilha_vazia(self):\n",
         "    return self.__topo == -1\n",
         "\n",
         "  def empilhar(self, valor):\n",
-        "    if self.__pilha_cheia():\n",
-        "      print('A pilha está cheia')\n",
-        "    else:\n",
-        "      self.__topo += 1\n",
-        "      self.__valores[self.__topo] = valor\n",
+        "    for char in valor:\n",
+        "      if self.__pilha_cheia():\n",
+        "        print('A pilha está cheia')\n",
+        "      else:\n",
+        "        self.__topo += 1\n",
+        "        self.__valores[self.__topo] = char\n",
+        "\n",
         "  def desempilhar(self):\n",
-        "    if self.__pilha_vazia():\n",
+        "    if self.pilha_vazia():\n",
         "      print('A pilha está vázia')\n",
         "    else:\n",
         "      self.__topo -= 1\n",
@@ -83,7 +85,7 @@
       "metadata": {
         "id": "oklUSFy3wnMw"
       },
-      "execution_count": 11,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -94,7 +96,7 @@
       "metadata": {
         "id": "accl2Hdz1iFP"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -109,7 +111,7 @@
         "id": "a1p4AHdf1muI",
         "outputId": "4da0fe12-8961-4465-c950-775ff9c5e7b3"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -136,7 +138,7 @@
         "id": "I7tjHUtlia7I",
         "outputId": "2f848d6c-deed-4552-8992-8e40b775fa5a"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -161,7 +163,7 @@
       "metadata": {
         "id": "7WdGTE5ciqio"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -176,7 +178,7 @@
         "id": "2FSK3qkgiv59",
         "outputId": "81ccb5a0-e41d-40a5-9328-372f1ffcc50a"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,7 +201,7 @@
         "id": "CBbDUZxvix6g",
         "outputId": "647407db-be91-4f73-cf4a-dd0d1f5b21f8"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -221,7 +223,7 @@
       "metadata": {
         "id": "yaAWK0gVi18R"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -236,7 +238,7 @@
         "id": "Lvf5tbu6i4xJ",
         "outputId": "1e4e813e-5217-4f5d-c750-49444ffb35dc"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -260,7 +262,7 @@
       "metadata": {
         "id": "Xr_X-XwAi8Zt"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -275,7 +277,7 @@
         "id": "2NF8SpoLi-5W",
         "outputId": "fc9776b5-59ab-49da-f790-6ddc83ac6cff"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -297,7 +299,7 @@
       "metadata": {
         "id": "xWfkn9yXjC8i"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -312,7 +314,7 @@
         "id": "BcgtVX-fjEGA",
         "outputId": "6fb5c7a5-2e22-4bba-de3d-4b5da1b6dece"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -323,6 +325,47 @@
           },
           "metadata": {},
           "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def validarExpressao(expressao):\n",
+        "  pilha = Pilha(len(expressao))\n",
+        "  marks = {'}': '{', ')': '(', ']': '['}\n",
+        "  for index, caractere in enumerate(expressao):\n",
+        "    if caractere in marks.values():\n",
+        "      pilha.empilhar(caractere)\n",
+        "    elif caractere in marks.keys():\n",
+        "      if pilha.ver_topo() == marks[caractere]:\n",
+        "        pilha.desempilhar()\n",
+        "      else:\n",
+        "        break\n",
+        "\n",
+        "  if pilha.pilha_vazia():\n",
+        "    print('sucesso')\n",
+        "  else:\n",
+        "    print(f'Erro: {caractere} na posicao {index}')\n",
+        "\n",
+        "\n",
+        "validarExpressao('a{b(c[d]e)f}')"
+      ],
+      "metadata": {
+        "id": "DPx4P0NeZOlG",
+        "outputId": "04abba1f-16ce-4be9-b666-724ffd249050",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "sucesso\n"
+          ]
         }
       ]
     }
